Change log next version
-----------------------
* Fix #668 @Mock fields are not injected anymore (1.6.5 regression)
* Fix #676 Using Powermock with Roo/AspectJ gives NullPointerException (thanks to Sebastian Saip @ssaip for pull request)
* Renamed org.powermock.reflect.internal.WhiteboxImpl.getAllMetodsExcept to org.powermock.reflect.internal.WhiteboxImpl.getAllMethodsExcept (typo)
* Added support for setting private static final fields in Whitebox.setInternalState  (thanks to Andrei Petcu @andreicristianpetcu for pull request)
* Fixed Java 6 compatibility issue in org.powermock.utils.StringJoiner (which accidentally referenced Java 7 API's)

Change log 1.6.5 (2015-04-30)
-----------------------------
* Add ability to chain returns with doReturn() (thanks to "gauee" for pull request) (issue #599)
* Code quality improvement, @Override annotation should be used on any method overriding (since Java 5) or implementing (since Java 6) another one
* PowerMockRunner now processes JUnit Rules correctly (thanks to Stefan Birkner for pull request) (issue 427)
* Added support for @TestSubject in EasyMock API. This is the equivalent of @InjectMocks in Mockito (big thanks to Arthur Zagretdinov for pull request)
* Added experimental support for mockito 2.x
* Ensuring JVM method size limit is never exceeded. Throw an user frendly exception if method size is exceeded. (thanks to Tomasz Przybyla for pull request) (issue #661)
* Fix #214: Whitebox.invokeConstructor may not work as expected with overloaded constructors
* Fix #352: PowerMockRunner should run tests defined in super class
* Fix #510: Static method mocking with Mockito 1.9.5 and Powermock fails with Java 8 Consumer Interface
* Fix #512: @PrepareForTest on method not working with PowerMockRule
* Fix #652: PowerMock stubbing void method don't work for overloaded methods
* Fix #648: TestNG SkipException doesn't work with PowerMock