@@ -1,0 +1,5 @@
+/**
+ *  TooManyActualInvocations when class is prepared for test.
+ *  https://github.com/jayway/powermock/issues/656
+ */
+package samples.testng.bugs.github656;
