@@ -2,9 +2,11 @@ Change log next version
 -----------------------
 * Fix #668 @Mock fields are not injected anymore (1.6.5 regression)
 * Fix #676 Using Powermock with Roo/AspectJ gives NullPointerException (thanks to Sebastian Saip @ssaip for pull request)
+* Fix #656 TooManyActualInvocations when class is prepared for test.
 * Renamed org.powermock.reflect.internal.WhiteboxImpl.getAllMetodsExcept to org.powermock.reflect.internal.WhiteboxImpl.getAllMethodsExcept (typo)
 * Added support for setting private static final fields in Whitebox.setInternalState  (thanks to Andrei Petcu @andreicristianpetcu for pull request)
 * Fixed Java 6 compatibility issue in org.powermock.utils.StringJoiner (which accidentally referenced Java 7 API's)
+* Refactoring: Move ProxyFramework from api modules to `reflect` module.
 
 Change log 1.6.5 (2015-04-30)
 -----------------------------
